<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.MainActivity">

    <TextView
        android:id="@+id/text_view_company_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/black_shaft"
        android:padding="@dimen/padding_medium"
        android:text="@string/company_label"
        android:textAllCaps="true"
        android:textColor="@color/white"
        android:textSize="@dimen/text_size_medium"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/text_view_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/padding_medium"
        android:layout_marginTop="@dimen/padding_medium"
        android:fontFamily="sans-serif-medium"
        android:textSize="@dimen/text_size_default"
        app:layout_constraintTop_toBottomOf="@id/text_view_company_label"
        tools:text="@string/company_description_info" />


    <TextView
        android:id="@+id/text_view_launches_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/padding_medium"
        android:background="@color/black_shaft"
        android:padding="@dimen/padding_medium"
        android:text="@string/launches_label"
        android:textAllCaps="true"
        android:textColor="@color/white"
        android:textSize="@dimen/text_size_medium"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_view_description" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:clipChildren="false"
        android:clipToPadding="false"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_view_launches_label"
        tools:itemCount="4"
        tools:listitem="@layout/cell_launch_item" />


</androidx.constraintlayout.widget.ConstraintLayout>