<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardBackgroundColor="@color/white"
    app:cardCornerRadius="0dp"
    app:cardElevation="0dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/padding_medium">

        <ImageView
            android:id="@+id/image_view_launch"
            android:layout_width="@dimen/launch_icon_size"
            android:layout_height="@dimen/launch_icon_size"
            android:layout_marginHorizontal="@dimen/padding_small"
            android:contentDescription="@string/app_name"
            android:src="@drawable/test_icon"
            app:layout_constraintEnd_toStartOf="@id/container_data"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/container_data"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toStartOf="@id/image_view_status"
            app:layout_constraintStart_toEndOf="@id/image_view_launch"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:id="@+id/layout_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:id="@+id/text_view_mission_label"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:text="@string/launch_mission"
                    android:textColor="@color/gray"
                    android:textSize="@dimen/text_size_default" />

                <TextView
                    android:id="@+id/text_view_mission_value"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:textColor="@color/gray"
                    android:textSize="@dimen/text_size_default"
                    tools:text="@string/launch_mission" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/layout_date"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/padding_medium"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/layout_name">

                <TextView
                    android:id="@+id/text_view_date_label"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:text="@string/launch_date"
                    android:textColor="@color/gray"
                    android:textSize="@dimen/text_size_default" />

                <TextView
                    android:id="@+id/text_view_date_value"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:textColor="@color/gray"
                    android:textSize="@dimen/text_size_default"
                    tools:text="@string/launch_mission" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/layout_rocket"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/padding_medium"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/layout_date">

                <TextView
                    android:id="@+id/text_view_rocket_label"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:text="@string/launch_rocket"
                    android:textColor="@color/gray"
                    android:textSize="@dimen/text_size_default" />

                <TextView
                    android:id="@+id/text_view_rocket_value"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:textColor="@color/gray"
                    android:textSize="@dimen/text_size_default"
                    tools:text="Huzayfa and brahim are st" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/layout_days"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginVertical="@dimen/padding_medium"
                android:orientation="horizontal"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/layout_rocket">

                <TextView
                    android:id="@+id/text_view_days_label"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:textColor="@color/gray"
                    android:textSize="@dimen/text_size_default"
                    tools:text="@string/launch_days" />

                <TextView
                    android:id="@+id/text_view_days_value"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:textColor="@color/gray"
                    android:textSize="@dimen/text_size_default"
                    tools:text="@string/launch_mission" />

            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <ImageView
            android:id="@+id/image_view_status"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginHorizontal="@dimen/padding_small"
            android:contentDescription="@string/app_name"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/container_data"
            app:layout_constraintTop_toTopOf="parent"
            tools:src="@drawable/ic_success" />


        <View
            android:id="@+id/separator"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@color/black"
            app:layout_constraintBottom_toBottomOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>


</com.google.android.material.card.MaterialCardView>